infrastructure/gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
spec:
  addresses:
  - type: IPAddress
    value: 192.168.10.50
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.vanillax.me"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.vanillax.me"
      tls:
        certificateRefs:
          - name: cert-vanillax
            kind: Secret
            group: "" # required
      allowedRoutes:
        namespaces:
          from: All
    # New TCP listener for PostgreSQL
    - name: postgres
      protocol: TCP
      port: 5432
