infrastructure/gateway/gw-tcp-postgres.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-route
  namespace: cloudnative-pg # Make sure this is in the same namespace as your PostgreSQL
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
      sectionName: postgres # References the listener name
  rules:
    - backendRefs:
        - name: single-example-rw # This should be your PostgreSQL service name
          port: 5432
